# haskell-winrt

./: .gitignore  .hlint.yaml  AppxManifest.xml  README.md  cabal.project  default.nix  roinit.cabal  roinit.hs
examples/: ChangeLog.md  c.c  derivative.nix  haskell-winrt-examples.cabal
examples/src/: begin.hs
experimentation/: GUID.hs  roinit.cabal  roinit.hs  roinit2.hs
foundation/: ChangeLog.md  haskell-winrt-foundation.cabal
foundation/src/Windows/UI/Xaml/: Application.hs
foundation/src/Windows/UI/Xaml/Application/: IApplicationFactory.hs  IApplicationInitializationCallback.hs  IApplicationInitializationCallbackParams.hs  IApplicationOverrides.hs  IApplicationOverrides_impl.hs  IApplicationStatics.hs
lowlevel/: ChangeLog.md  haskell-winrt-lowlevel.cabal
lowlevel/src/System/Windows/WinRT/Lowlevel/: HSTRING.hs  Info.hs  Monad.hs
