name: winrt-hs
description: haskell access to WinRT/UWP protocols
version: 0.1
license: BSD3
author: Tristan
build-type: Simple
cabal-version: >=1.10

executable roinit
  main-is: roinit.hs
  ghc-options: -Wall  -prof -fprof-auto -fprof-cafs
  extra-libraries: windowsapp
  default-language: Haskell2010
  build-depends: base, text, mtl


