name: winrt-hs
description: haskell access to WinRT/UWP protocols
version: 0.1
license: BSD3
author: Tristan
build-type: Simple
cabal-version: >=1.10

executable roinit2
  main-is: roinit2.hs
  other-modules: GUID
  ghc-options: -Wall
  extra-libraries: windowsapp
  default-language: Haskell2010
  build-depends: base, text, mtl

executable roinit
  main-is: roinit.hs
  other-modules: GUID
  ghc-options: -Wall
  extra-libraries: windowsapp
  default-language: Haskell2010
  build-depends: base, text, mtl
  buildable: False

